# nopng

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: green.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_png.rs
pbt/: Cargo.toml
pbt/tests/: proptest_png.rs
src/: adler32.rs  chunk.rs  crc.rs  deflate.rs  encoder.rs  lib.rs  pixel_reformat.rs  png.rs  png_decode.rs  png_encode.rs  png_pixels.rs  png_types.rs  zlib.rs
tests/: png_decode.rs
