[package]
name = "nopng"
version = "0.0.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A PNG library with no dependencies"
homepage = "https://github.com/sile/nopng"
repository = "https://github.com/sile/nopng"
readme = "README.md"
categories = ["multimedia::images"]

[dependencies]
