[package]
name = "nopng"
version = "0.0.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A no-dependencies, no_std PNG library with no trait-based public API"
homepage = "https://github.com/sile/nopng"
repository = "https://github.com/sile/nopng"
readme = "README.md"
categories = ["multimedia::images", "encoding", "no-std"]

[dependencies]

[workspace]
members = ["pbt"]
exclude = ["fuzz"]
