[package]
name = "nopng"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A minimal PNG encoder/decoder with no dependencies and no_std"
homepage = "https://github.com/sile/nopng"
repository = "https://github.com/sile/nopng"
readme = "README.md"
categories = ["multimedia::images", "encoding", "no-std"]

[dependencies]

[workspace]
members = ["pbt"]
exclude = ["fuzz"]
